[package]
name = "elton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
itertools = "0.11.0"
log = { version = "0.4.20", features = ["serde"] }
rand = { version = "0.8.5", features = ["serde", "small_rng"] }
serde = { version = "1.0.188", features = ["derive"] }
simple_logger = { version = "4.2.0", features = ["threads"] }
sqlx = { version = "0.7.1", features = ["sqlx-sqlite", "runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[profile.dev]
opt-level = 3 
